workshops/lab-vote-version-2/namespaces.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: vote
  labels:
    pod-security.kubernetes.io/enforce: restricted
    pod-security.kubernetes.io/audit: restricted
    pod-security.kubernetes.io/warn: restricted
